# john-elliot

adventure/gac2dsk/: COPYING  ChangeLog  Makefile.am  Makefile.in  README  config.h.in  configure  configure.in  gac2dsk.c  gac2tap.c  gacread.c  gacread.h  plus3fs.c  plus3fs.h
joyce/source/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  TODO  acinclude.m4  aclocal.m4  config.h.in  configure  configure.ac  font8x16.x16
lib765/: ChangeLog  Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.in
lib765/LDBS/: dsk2ldbs.c  ldbs2dsk.c
lib765/doc/: 765.txt~  Makefile.am  libdsk.txt  libdskrc.sample
lib765/dos16ppd/: config.h  mk.bat
lib765/dos32gcc/: config.h
lib765/dskwrite/: dskwrite.asm
lib765/include/: Makefile.am  Makefile.in
lib765/lib/: Makefile.am  Makefile.in  drivers.inc  drvadisk.c  drvcfi.c  drvdos16.c  drvdos32.c  drvdos32.h  drvdskf.c  drvi.h  drvimd.h  drvint25.c  drvmyz80.c  drvmyz80.h  drvrcpm.c  drvsimh.c  drvwin16.c  dskcheck.c  dskerror.c  dsklphys.c  dskopen.c  dskpars.c  dsksecid.c  dskseek.c  dskwrite.c  ldbs.c  ldbs.h  rpccli.c  w16defs.h
lib765/man/: Makefile.in  dskdump.1  dsktrans.1  dskutil.1  libdskrc.5
lib765/rpcserv/: aboutbox.c  ldserver.c  ldserver.def  ldserver.h  mailslot.h  resource.h
lib765/tools/: DskID.java  DskTrans.java  bootsec.c  dskdump.c  dsktest.c  dsktrans.c  formname.h  serslave.c  utilopts.c  utilopts.h
lib765/win16vc1/: APRIBOOT.MAK  DSKFORM.MAK  DSKSCAN.MAK  config.h
lib765/win32bc5/: config.h
lib765/win32vc6/: Geometry.h  Geometry.rgs  Library.h  Library.rgs  Reporter.h  StdAfx.h  atlibdsk.cpp  atlibdsk.def  atlibdsk.dsw  atlibdsk.h  atlibdsk_p.c  atlibdskps.def  config.h  dlldatax.c  dskdump.dsp  dsktrans.c  dskutil.dsp  libdsk.dsp  libdsk.dsw
libdsk/: ChangeLog  Makefile.am  Makefile.in  TODO  acinclude.m4  config.h.in  configure  configure.ac
libdsk/LDBS/: Makefile  dsk2ldbs.c  ldbs.h  ldbs.html  ldbs2dsk.c  ldbscopy.c  ldbsdump.c  ldbstest.c
libdsk/doc/: Makefile.am  Makefile.in  libdsk.lyx  libdsk.txt  qrst.html
libdsk/dos16ppd/: mk.bat
libdsk/dos32gcc/: Makefile
libdsk/dskwrite/: dskwrite.txt  dskwrite.z80
libdsk/include/: Makefile.in  libdsk.h
libdsk/lib/: Makefile.am  Makefile.in  compress.c  compsq.c  comptlzh.c  drivers.h  drivers.inc  drv.h  drvadisk.c  drvadisk.h  drvcfi.c  drvcfi.h  drvcpcem.c  drvcpcem.h  drvdos16.c  drvdos32.c  drvdskf.c  drvgotek.c  drvgotek.h  drvi.h  drvimd.c  drvimd.h  drvint25.c  drvjv3.c  drvjv3.h  drvldbs.c  drvldbs.h  drvlinux.c  drvlogi.c  drvlogi.h  drvmyz80.c  drvmyz80.h  drvntwdm.c  drvnwasp.c  drvnwasp.h  drvposix.c  drvposix.h  drvqm.c  drvqm.h  drvqrst.c  (+39 more)
libdsk/man/: Makefile.am  Makefile.in  apriboot.1  dskconv.1  dskdump.1  dskform.1  dskid.1  dskscan.1  dsktrans.1  dskutil.1  md3serial.1
libdsk/rpcserv/: ldserver.rc
libdsk/tools/: DskFormat.java  FormatNames.java  Makefile.am  Makefile.in  apriboot.c  apriboot.h  bootsec.c  check1.c  dskconv.c  dskdump.c  dskform.c  dskid.c  dsklabel.c  dskscan.c  dsktest.c  dsktrans.c  dskutil.c  forkslave.c  labelopt.c  labelopt.h  lsgotek.c  md3serial.c  serslave.c  utilopts.c  utilopts.h
libdsk/win16bc5/: config.h
libdsk/win16vc1/: DSKCONV.MAK  DSKDUMP.MAK  DSKID.MAK  DSKTRANS.MAK  DSKUTIL.MAK  LDSERVER.MAK  LIBDSK16.MAK  config.h  libdsk.def
libdsk/win32bc5/: libdsk.def
libdsk/win32vc6/: Disk.cpp  Disk.h  Disk.rgs  Geometry.cpp  Library.cpp  Reporter.cpp  Reporter.rgs  StdAfx.cpp  apriboot.dsp  atlibdsk.dsp  atlibdsk.h  atlibdsk.idl  atlibdsk.rc  atlibdsk_i.c  atlibdsk_p.c  dlldata.c  dlldatax.h  dskconv.dsp  dskform.dsp  dskid.dsp  dsklabel.dsp  dskscan.dsp  dsktrans.dsp  libdsk.dsp  libdsk.dsw  lsgotek.dsp  resource.h  serslave.dsp
pcwexplorer/: Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.in
pcwexplorer/LibDsk/: ChangeLog  Makefile.am  Makefile.in  configure.in
pcwexplorer/Xpm/: Makefile.am  Makefile.in  drive.xpm  drive_small.xpm  file.xpm  file_basic.xpm  file_basic_small.xpm  file_com.xpm  file_com_small.xpm  file_cut.xpm  file_cut_small.xpm  file_logo.xpm  file_logo_small.xpm  file_mda.xpm  file_mda_small.xpm  file_mvg.xpm  file_mvg_small.xpm  file_png.xpm  file_png_small.xpm  file_small.xpm  file_spc.xpm  file_spc_small.xpm  file_sub.xpm  file_sub_small.xpm  file_tmpl.xpm  file_tmpl_small.xpm  file_txt.xpm  file_txt_small.xpm  folder.xpm  folder_small.xpm  pcw.xpm
pcwexplorer/cpmtools/: Makefile.am  Makefile.in  config.h  cpmfs.h
pcwexplorer/imtypes/: Makefile.am  Makefile.in  image_cut.cxx  image_cut.hxx  image_logo.cxx  image_logo.hxx  image_mda.cxx  image_mda.hxx  image_mvg.cxx  image_mvg.hxx  image_spc.cxx  image_spc.hxx  image_utils.cxx  image_utils.hxx  imtypes.hxx
psftools/: .gitignore  AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  README.md  TODO  config.h.in  configure  configure.ac  configure.in
psftools/Fonts/: Makefile.am  Makefile.in  README  mkfonts  tsans08.txt  tsans14.txt  tsans16.txt
psftools/doc/: Makefile.am  Makefile.in  codepage.txt  cp2.txt  cpi.txt  psftools.txt
psftools/dos16ppd/: README
psftools/include/: Makefile.am  Makefile.in  psflib.h  psfutils.h
psftools/lib/: 8859-1.c  8859-10.c  8859-13.c  8859-14.c  8859-15.c  8859-16.c  8859-2.c  8859-3.c  8859-4.c  8859-5.c  8859-6.c  8859-7.c  8859-8.c  8859-9.c  AMSTRAD.c  BBCMICRO.c  CP1250.c  CP1251.c  CP1252.c  CP1253.c  CP1254.c  CP1255.c  CP1256.c  CP1257.c  CP1258.c  CP367.c  CP437.c  CP737.c  CP775.c  CP850.c  CP852.c  CP855.c  CP857.c  CP858.c  CP860.c  CP861.c  CP862.c  CP863.c  CP864.c  CP865.c  (+26 more)
psftools/man/: Makefile.am  Makefile.in  ams2psf.1  cpi2psf.1  cpicomp.1  cpidcomp.1  (+27 more)
taptools/: .gitignore  ChangeLog  Makefile.am  Makefile.in  README  TODO  bin2bas.c  cnvshell.c  cnvshell.h  config.h.in  configure  configure.ac  dsk2tap.c  dskbits.c  dskbits.h  dskwrite.inc  dskwrite.zsm  dualdos.reg  mgtfs.c  mgtfs.h  mkibmtap.c  mkmgtfs.c  mkp3fs.c  plus3fs.c  plus3fs.h  romsna.zsm  sna2dsk.c  sna2tap.c  snapld.zsm  specform.c  tap2dsk.c  tapcat.c  tapeio.c  tapeio.h  tapget.c  tapls.c  tapsplit.c  unspecfm.c
(+640 files in other folders)
