dnl Process this file with autoconf to produce a configure script.
AC_INIT(bin/app.cxx)
AC_CONFIG_AUX_DIR(config)
VERSION=0.3.0
UPDATED='19 June 2006'
AM_INIT_AUTOMAKE(pcwplore, $VERSION)
AM_CONFIG_HEADER(config.h)
AC_CANONICAL_HOST

dnl Get an absolute version of $srcdir and .
DSTROOT=`pwd`
if test x"$srcdir" = x
then
        SRCROOT=`pwd`
else
        cd $srcdir
        SRCROOT=`pwd`
        cd $DSTROOT
fi

AC_CYGWIN
AC_MINGW32
AC_EXEEXT
AC_OBJEXT
dnl Add LibDsk to list of things to do
CPPFLAGS="$CPPFLAGS -I$SRCROOT -I$SRCROOT/LibDsk/include -I$SRCROOT/cpmtools -I$SRCROOT/imtypes -DALIBROOT=${datadir}/PcwPlore -DAUTOSHARE=${datadir}/LibDsk -DHAVE_LIBDSK_H=1 -DNOTWINDLL"
LDFLAGS="$LDFLAGS -L$DSTROOT/LibDsk/lib"

dnl
dnl Use mini-STL rather than the host platform's STL
dnl

AC_ARG_ENABLE(floppy,
[  --enable-floppy         Enable host floppy driver [default=yes]],
              , enable_floppy=yes)
if test x$enable_floppy = xyes; then
    :
else
    CFLAGS="$CFLAGS -DDISABLE_FLOPPY"
fi
dnl Don't build a .so version of LibDsk; JOYCE will use the static one.
AC_DISABLE_SHARED

CPPFLAGS="$CPPFLAGS $MINISTL_CFLAGS"

dnl Dummy-out the Java bits for LibDsk & LibLink. We won't need them.
LIBDSKJAR=
LLINKJAR=
TOOLCLASSES=
EGCLASSES=
JAVAH=true 
JAVAC=true 
JAVA=true
JAVADOC=true
JAR=true


dnl Checks for programs.
AC_PROG_CXX
AC_PROG_CC
AC_PROG_INSTALL
AM_PROG_LIBTOOL
dnl Obsoleted by LIBTOOL AC_PROG_RANLIB
AC_PROG_MAKE_SET

if test "$GCC" = yes
then
  CFLAGS="${CFLAGS} -Wall -D_GNU_SOURCE" 
fi



dnl Checks for libraries.
AM_OPTIONS_WXCONFIG
AM_PATH_WXCONFIG(2.2.9, wxWin=1)
if test "$wxWin" != 1; then
	AC_MSG_ERROR([
                wxWidgets must be installed on your system
                but the wx-config script couldn't be found.

                Please check that wx-config is in path, the directory
                where wxWidgets libraries are installed (returned by
                'wx-config --libs' command) is in LD_LIBRARY_PATH or
                equivalent variable and wxWidgets version is 2.2.9 or above.
        ])
fi
CPPFLAGS="$CPPFLAGS $WX_CPPFLAGS"
CXXFLAGS="$CXXFLAGS $WX_CXXFLAGS_ONLY"
CFLAGS="$CFLAGS $WX_CFLAGS_ONLY"
LDFLAGS="$LDFLAGS $WX_LIBS"

dnl Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_CHECK_HEADERS(glob.h termios.h)
AC_CHECK_HEADERS(fcntl.h limits.h sys/ioctl.h sys/time.h sys/types.h unistd.h)
AC_CHECK_HEADERS(sys/vfs.h utime.h time.h)
AC_CHECK_HEADERS(errno.h sys/errno.h sys/stat.h sys/mman.h)
AC_CHECK_HEADERS(linux/fd.h linux/fdreg.h windows.h winioctl.h)
AC_CHECK_HEADERS(sys/socket.h sys/un.h netinet/in.h netdb.h)
AC_CHECK_HEADERS(linux/parport.h linux/ppdev.h termios.h)
AC_CHECK_HEADERS(windows.h winnt.h winsock.h conio.h)
AC_CHECK_HEADERS(kernel/fs_info.h sys/param.h sys/mount.h)

AC_TYPE_MODE_T
AC_TYPE_OFF_T
AC_TYPE_PID_T
AC_TYPE_SIZE_T
AC_STRUCT_TM

dnl
dnl Don't replicate the nassty fudge in LibLink for checking -lwsock32;
dnl just always assume it in Cygwin or MinGW.
dnl
dnl if test "$CYGWIN" = "yes"
dnl then
dnl   LIBS="$LIBS -lz -lwsock32"
dnl   CFLAGS="$CFLAGS -fvtable-thunks"
dnl   CXXFLAGS="$CXXFLAGS -fvtable-thunks"
dnl else 
dnl   if test "$MINGW32" = "yes"
dnl   then
dnl     LIBS="$LIBS -lz -lwsock32"
dnl     CFLAGS="$CFLAGS -fvtable-thunks"
dnl     CXXFLAGS="$CXXFLAGS -fvtable-thunks"
dnl   fi
dnl fi


dnl Drop the libxml check (copied from joyce).
dnl AC_PATH_PROG(XML_CONFIG, xml-config, no)
dnl AC_MSG_CHECKING(for libxml)
dnl if test "$XML_CONFIG" = "no" ; then
dnl   AC_MSG_RESULT(no)
dnl   echo "*** Could not find libxml. Check out the libxml homepage at "
dnl   echo "*** http://rufus.w3.org/veillard/XML/xml.html or just get "
dnl   echo "*** the appropriate package for your system. If you have Debian, "
dnl   echo "*** get libxml-dev"
dnl   AC_MSG_ERROR([libxml needed])
dnl else
dnl   AC_MSG_RESULT(yes)
dnl 
dnl   # Check for proper version
dnl   AC_MSG_CHECKING(for version 1.8.9 (or better) of libxml)
dnl 
dnl   # Check if old or new style xml-config
dnl   libxml_version=`$XML_CONFIG --version`
dnl   libxml_version=`echo $libxml_version | sed 's/ //'`
dnl   if test `expr $libxml_version : libxml` != 0; then
dnl 
dnl     xml_config_major_version=`$XML_CONFIG --version | \
dnl       sed 's/libxml \([[0-9]]*\).\([[0-9]]*\).\([[0-9]]*\)/\1/'`
dnl     xml_config_minor_version=`$XML_CONFIG --version | \
dnl       sed 's/libxml \([[0-9]]*\).\([[0-9]]*\).\([[0-9]]*\)/\2/'`
dnl     xml_config_micro_version=`$XML_CONFIG --version | \
dnl       sed 's/libxml \([[0-9]]*\).\([[0-9]]*\).\([[0-9]]*\)/\3/'`
dnl 
dnl   else
dnl 
dnl     xml_config_major_version=`$XML_CONFIG --version | \
dnl       sed 's/\([[0-9]]*\).\([[0-9]]*\).\([[0-9]]*\)/\1/'`
dnl     xml_config_minor_version=`$XML_CONFIG --version | \
dnl       sed 's/\([[0-9]]*\).\([[0-9]]*\).\([[0-9]]*\)/\2/'`
dnl     xml_config_micro_version=`$XML_CONFIG --version | \
dnl       sed 's/\([[0-9]]*\).\([[0-9]]*\).\([[0-9]]*\)/\3/'`
dnl 
dnl   fi
dnl 
dnl   # Check if version is good
dnl   if test \( $xml_config_major_version -eq 1 \) -a \
dnl           \( $xml_config_minor_version -eq 8 \) -a \
dnl           \( $xml_config_micro_version -lt 9 \) ; then
dnl 
dnl      AC_MSG_RESULT(no)
dnl      echo "*** You need libxml 1.8.9 or greater. Check out the libxml "
dnl      echo "*** homepage at http://rufus.w3.org/veillard/XML/xml.html or just get "
dnl      echo "*** the appropriate package for your system. If you have Debian, "
dnl      echo "*** get the latest libxml-dev"
dnl      AC_MSG_ERROR([libxml 1.8.9 or greater needed])
dnl 
dnl   else
dnl      AC_MSG_RESULT(yes)
dnl   fi
dnl 
dnl   XML_LIBS=`$XML_CONFIG --libs`
dnl   XML_CFLAGS=`$XML_CONFIG --cflags`
dnl   LIBS="$LIBS $XML_LIBS"
dnl   CFLAGS="$CFLAGS $XML_CFLAGS"
dnl   CXXFLAGS="$CXXFLAGS $XML_CFLAGS"
dnl fi 

dnl AC_CHECK_LIB(png, png_init_io, , [echo "libpng not found - aborting"; exit 1])

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T
AC_STRUCT_ST_RDEV

dnl Checks for library functions.
AC_PROG_GCC_TRADITIONAL
AC_HEADER_MAJOR
AC_FUNC_MEMCMP
AC_FUNC_VPRINTF
AC_FUNC_UTIME_NULL
AC_FUNC_MMAP
AC_CHECK_FUNCS(mkdir rmdir)
AC_CHECK_FUNCS(strerror)

dnl Checks for functions
AC_CHECK_FUNCS(strcmpi stricmp strcasecmp, break)

dnl cpmtools configuration info
LDLIBS=""
LDDEPS=""
DEVICE="libdsk"
DEFFORMAT="amstrad"
dnl Add our own libraries to the link line. This has to be done last,
dnl because otherwise the earlier tests try to link these libraries (which 
dnl haven't been built yet) and fail.
AC_SUBST(LIBDSKJAR)
AC_SUBST(LLINKJAR)
AC_SUBST(TOOLCLASSES)
AC_SUBST(EGCLASSES)
AC_SUBST(JAVAH)
AC_SUBST(JAVAC)
AC_SUBST(JAVA)
AC_SUBST(JAVADOC)
AC_SUBST(JAR)
AC_SUBST(LDLIBS)
AC_SUBST(LDDEPS)
AC_SUBST(DEVICE)
AC_SUBST(DEFFORMAT)

eval DATADIR=$datadir
AC_SUBST(DATADIR)

AC_OUTPUT(Makefile Xpm/Makefile Xpm/toolbar/Makefile bin/Makefile \
          LibDsk/Makefile LibDsk/include/Makefile LibDsk/lib/Makefile \
          LibDsk/tools/Makefile cpmtools/Makefile imtypes/Makefile )

