bin_PROGRAMS=specform tapcat tapget tapsplit unspecform tapls tap2dsk mkp3fs \
	     bin2bas sna2tap dsk2tap sna2dsk mkmgtfs mkibmtap
EXTRA_DIST=README COPYING INSTALL ChangeLog dualdos.reg dskwrite.zsm \
	snapld.zsm romsna.zsm

specform_SOURCES=specform.c
unspecform_SOURCES=unspecfm.c cnvshell.c cnvshell.h
sna2tap_SOURCES=sna2tap.c cnvshell.c cnvshell.h tapeio.c tapeio.h
tapcat_SOURCES=tapcat.c tapeio.c tapeio.h
tapget_SOURCES=tapget.c tapeio.c tapeio.h
tapsplit_SOURCES=tapsplit.c tapeio.c tapeio.h
tapls_SOURCES=tapls.c tapeio.c tapeio.h
tap2dsk_SOURCES=tap2dsk.c dskbits.c dskbits.h plus3fs.c plus3fs.h \
		tapeio.c tapeio.h 
mkp3fs_SOURCES=mkp3fs.c dskbits.c dskbits.h plus3fs.c plus3fs.h
mkmgtfs_SOURCES=mkmgtfs.c dskbits.c dskbits.h mgtfs.c mgtfs.h
dsk2tap_SOURCES=dsk2tap.c dskbits.c dskbits.h dskwrite.inc tapeio.c tapeio.h
bin2bas_SOURCES=bin2bas.c cnvshell.c cnvshell.h tapeio.c tapeio.h 
sna2dsk_SOURCES=sna2dsk.c dskbits.c dskbits.h plus3fs.c plus3fs.h
mkibmtap_SOURCES=mkibmtap.c tapeio.c tapeio.h
