dnl Process this file with autoconf to produce a configure script.
AC_INIT(gac2dsk.c)

VERSION=1.0.0
UPDATED='14 September 2009'

AM_INIT_AUTOMAKE(gac2dsk, $VERSION)
AM_CONFIG_HEADER(config.h)
AC_CANONICAL_HOST

AC_CYGWIN
AC_MINGW32
AC_EXEEXT

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LN_S

dnl Checks for libraries.
AC_CHECK_LIB(dsk, dsk_open, LIBS="$LIBS -ldsk",
	     [AC_MSG_ERROR(libdsk not found)])

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(stat.h sys/stat.h)

AC_CHECK_HEADERS(libdsk.h, , [AC_MSG_ERROR(libdsk.h not found)])
AC_CHECK_LIB(z, zlibVersion)
dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

dnl Checks for library functions.
AC_FUNC_MEMCMP
AC_CHECK_FUNCS(stricmp)


AC_OUTPUT(Makefile)
