dnl Process this file with autoconf to produce a configure script.
AC_INIT(lib/dskopen.c)
AC_CONFIG_AUX_DIR(config)
VERSION=0.7.1
UPDATED='February 8, 2002'
AM_INIT_AUTOMAKE(libdsk, $VERSION)
AM_CONFIG_HEADER(config.h)

dnl Enable / disable machine-specific "floppy" driver
AC_ARG_ENABLE(floppy,
[  --enable-floppy         Enable host floppy driver [default=yes]],
              , enable_floppy=yes)
if test x$enable_floppy = xyes; then
    :
else
    CFLAGS="$CFLAGS -DDISABLE_FLOPPY"
fi

dnl No shared libraries for now
AC_DISABLE_SHARED

dnl Checks for programs.
AC_PROG_CC
AC_PROG_INSTALL
AC_PROG_LIBTOOL
AC_PROG_RANLIB
AC_PROG_MAKE_SET

dnl GCC extra options
if test "$ac_cv_prog_gcc" = "yes"; then
  CFLAGS="-Wall $CFLAGS"
fi

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(errno.h sys/ioctl.h sys/stat.h unistd.h fcntl.h)
AC_CHECK_HEADERS(linux/fd.h linux/fdreg.h windows.h winioctl.h)

dnl Checks for functions
AC_CHECK_FUNCS(strcmpi stricmp strcasecmp, break)

dnl Checks for libraries.

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T
AC_EXEEXT
AC_OBJEXT

dnl Checks for library functions.
AC_PROG_GCC_TRADITIONAL
AC_HEADER_MAJOR
AC_FUNC_MEMCMP
AC_CHECK_FUNCS(strerror)

AC_OUTPUT(Makefile include/Makefile lib/Makefile tools/Makefile)
