SUBDIRS=toolbar .

SOURCES= drive_small.xpm       file_mda_small.xpm  file_sub.xpm \
	drive.xpm	      file_mda.xpm	  file_tmpl_small.xpm \
	file_basic_small.xpm  file_mvg_small.xpm  file_tmpl.xpm \
	file_basic.xpm	      file_mvg.xpm	  file_txt_small.xpm \
	file_com_small.xpm    file_png_small.xpm  file_txt.xpm \
	file_com.xpm	      file_png.xpm	  file.xpm \
	file_cut_small.xpm    file_small.xpm	  folder_small.xpm \
	file_cut.xpm	      file_spc_small.xpm  folder.xpm \
	file_logo_small.xpm   file_spc.xpm \
	file_logo.xpm	      file_sub_small.xpm  \
	pcw.xpm
