man_MANS= cpi2psf.1   mda2psf.1  psf2pbms.1  psf2xbm.1   psfs2cpi.1  wof2psf.1 \
	  cpicomp.1   psf2bdf.1  psf2raw.1   psf2zx.1    psfxform.1  zx2psf.1 \
	  cpidcomp.1  psf2inc.1  psf2wof.1   psfpages.1  raw2psf.1 psfmerge.1 \
	  psfjoin.1   psf2fnt.1  fnt2psf.1   fnts2fon.1  fon2fnts.1 psf2txt.1 \
	  txt2psf.1   psf2wyse.1 wyse2psf.1  psf2bsd.1   psfs2mda.1 psf2ams.1 \
	  ams2psf.1

EXTRA_DIST=$(man_MANS)
