dnl Process this file with autoconf to produce a configure script.
AC_INIT(lib/cpmredir.c)
AC_CONFIG_AUX_DIR(config)
VERSION=1.1.0
UPDATED='July 7, 2001'
AM_INIT_AUTOMAKE(cpmredir, $VERSION)
AM_CONFIG_HEADER(config.h)

dnl Checks for programs.
AC_PROG_CC
AC_PROG_RANLIB

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_DIRENT
AC_HEADER_STDC
AC_CHECK_HEADERS(fcntl.h unistd.h sys/vfs.h windows.h winnt.h utime.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_OFF_T

dnl Checks for library functions.
AC_FUNC_MEMCMP
AC_FUNC_UTIME_NULL
AC_FUNC_VPRINTF
AC_CHECK_FUNCS(mkdir rmdir)

AC_OUTPUT(Makefile include/Makefile lib/Makefile)
